--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -12,9 +12,8 @@ img {
 
 
 ion-content {
-    --background: url('/assets/icon/bg1.jpg') center/cover no-repeat;
+    --background: url('./assets/icon/bg1.jpg') center/cover no-repeat;
     position: relative;
- 
 }
 
 ion-card {
