Update background and styling to cover the full page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -12,8 +12,9 @@ img {
 
 
 ion-content {
-    --background: url('./assets/icon/bg1.jpg') center/cover no-repeat;
+    --background: url('/assets/icon/bg1.jpg') center/cover no-repeat;
     position: relative;
+ 
 }
 
 ion-card {
